--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -9,9 +9,9 @@
     <file>themes/vsu/interface-help-question-circle-vsu.png</file>
   </qresource>
   <qresource prefix="rules-preview">
+    <file>rules-preview/ENGLISH.png</file>
     <file>rules-preview/CALCULATION_METHODS.png</file>
     <file>rules-preview/ELECTRONICS.png</file>
-    <file>rules-preview/ENGLISH.jpg</file>
     <file>rules-preview/HMI.png</file>
     <file>rules-preview/LANGUAGES.png</file>
     <file>rules-preview/MATEQ.png</file>
@@ -21,27 +21,10 @@
     <file>rules-preview/UNIX.png</file>
     <file>rules-preview/XALYBA.png</file>
   </qresource>
-  <qresource prefix="audio">
-    <file>audio/sfx_best_score_1.wav</file>
-    <file>audio/sfx_best_score_2.wav</file>
-    <file>audio/sfx_credit.wav</file>
-    <file>audio/sfx_credit_with_mark.wav</file>
-    <file>audio/sfx_deny_restart.ogg</file>
-    <file>audio/sfx_exam.wav</file>
-    <file>audio/sfx_exit_attention.ogg</file>
-    <file>audio/sfx_game_start.wav</file>
-    <file>audio/sfx_heterogenese.ogg</file>
-    <file>audio/sfx_normal_score.wav</file>
-    <file>audio/sfx_normal_select.wav</file>
-    <file>audio/sfx_sound_test_1.wav</file>
-    <file>audio/sfx_unavailable_selection.wav</file>
-    <file>audio/sfx_unselection.wav</file>
-    <file>audio/sfx_xalyba.ogg</file>
-  </qresource>
   <qresource prefix="attestation-preview">
+    <file>attestation-preview/ENGLISH.png</file>
     <file>attestation-preview/CALCULATION_METHODS.png</file>
     <file>attestation-preview/ELECTRONICS.png</file>
-    <file>attestation-preview/ENGLISH.jpg</file>
     <file>attestation-preview/HMI.png</file>
     <file>attestation-preview/LANGUAGES.png</file>
     <file>attestation-preview/MATEQ.png</file>
